# khiin

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  buffer.cpp  buffer.h  errors.h  guids.txt  keys.h  libtaikey.cpp  libtaikey.h  post-build.py  trie.cpp  trie.h  version-bump.ps1  version.h
KhiinPJH/: Action.h  BaseWindow.cpp  BaseWindow.h  CandidateListUI.cpp  CandidateListUI.h  CandidateWindow.cpp  CandidateWindow.h  Compartment.cpp  Compartment.h  CompositionMgr.cpp  CompositionMgr.h  CompositionSink.cpp  CompositionSink.h  DisplayAttributeInfo.cpp  DisplayAttributeInfo.h  DisplayAttributeInfoEnum.cpp  DisplayAttributeInfoEnum.h  DllModule.cpp  DllModule.h  EditSession.cpp  EditSession.h  ITextEngine.cpp  ITextEngine.h  ITextService.cpp  ITextService.h  KeyEvent.cpp  KeyEvent.h  KeyEventSink.cpp  KeyEventSink.h  KhiinClassFactory.cpp  KhiinClassFactory.h  KhiinPJH.vcxproj  KhiinPJH.vcxproj.filters  Profile.cpp  Profile.h  Registrar.cpp  Registrar.h  SinkManager.h  TextEditSink.cpp  TextEditSink.h  (+11 more)
android/: README.md  build.gradle.kts
android/app/: CMakeLists.txt  build.gradle.kts
design/: graphic.ai  icon-48.psd  icon.ai  icons.psd  modes.ai
engine/: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  Engine.cpp  Engine.h  README.md  linux_build.md  sample.txt  vcpkg.json
engine/config/: CMakeLists.txt  Config.cpp  Config.h  KeyConfig.cpp  KeyConfig.h
engine/data/: CMakeLists.txt  Database.cpp  Database.h  Dictionary.cpp  Dictionary.h  Models.h  SQL.cpp  SQL.h  Splitter.cpp  Splitter.h  Trie.cpp  Trie.h  TrieFactory.h  UserDictionary.cpp  UserDictionary.h  UserDictionaryParser.cpp  UserDictionaryParser.h
engine/engine/: Buffer.cpp  Buffer.h  BufferElement.cpp  BufferElement.h  BufferImpl2.cpp  BufferManager.cpp  BufferManager.h  BufferMgr.cpp  BufferMgr.h  BufferSegment.cpp  BufferSegment.h  CMakeLists.txt  CandidateFinder.cpp  CandidateFinder.h  Caret.cpp  Config.cpp  Config.h  Database.cpp  Database.h  Dictionary.cpp  Dictionary.h  Engine.cpp  Engine.h  KeyConfig.cpp  KeyConfig.h  KhinHandler.cpp  KhinHandler.h  Lomaji.cpp  Lomaji.h  Message.h  Models.h  ParallelIterators.h  SQL.cpp  SQL.h  Segmenter.cpp  Segmenter.h  Splitter.cpp  Splitter.h  Syllable.cpp  Syllable.h  (+27 more)
engine/input/: Buffer.cpp  Buffer.h  BufferElement.cpp  BufferElement.h  BufferMgr.cpp  BufferMgr.h  CMakeLists.txt  CandidateFinder.cpp  CandidateFinder.h  KhinHandler.cpp  Lomaji.cpp  Lomaji.h  Segmenter.cpp  Segmenter.h  Syllable.cpp  SyllableParser.cpp  SyllableParser.h  TaiText.cpp  TaiText.h  UserToken.cpp  UserToken.h
engine/khiin_engine/: CMakeLists.txt  buffer.cpp  buffer_manager.cpp  candidates.h  common.h  config.cpp  config.h  db.cpp  db.h  engine.cpp  errors.h  keys.h  splitter.cpp  sql.h  utils.h
engine/tests/: .clang-tidy  BasicModeTest.cpp  BufferMgrBaseTest.cpp  BufferMgrBaseTest.h  BufferMgrTest.cpp  BufferMgrTestBase.cpp  BufferMgrTestBase.h  BufferMgr_Test.cpp  CMakeLists.txt  DatabaseTest.cpp  DictionaryTest.cpp  Dictionary_Test.cpp  EngineTest.cpp  Engine_Test.cpp  KeyConfigTest.cpp  KeyConfig_Test.cpp  KeyConfiguration_Test.cpp  LomajiTest.cpp  NgramTest.cpp  SegmenterTest.cpp  Segmenter_Test.cpp  SplitterTest.cpp  Splitter_Test.cpp  SyllableParserTest.cpp  SyllableParser_Test.cpp  SyllableTest.cpp  Syllable_test.cpp  TestEnv.h  TestMain.cpp  Transliterator_test.cpp  TrieTest.cpp  Trie_Test.cpp  UnicodeTest.cpp  Unicode_Test.cpp  UserDictionaryParserTest.cpp  UserDictionaryTest.cpp  UtilsTest.cpp  test_buffer.cpp  test_candidates.cpp  test_db.cpp  (+5 more)
engine/utils/: CMakeLists.txt  Logger.cpp  Logger.h  common.h  log.h  unicode.cpp  unicode.h  utils.cpp  utils.h
khiin_engine/: candidates.cpp  cursor.cpp  cursor.h  engine.h  lomaji.cpp  lomaji.h  splitter.h  trie.cpp  trie.h
libtaikey/: CMakeLists.txt  buffer.cpp  buffer.h  buffer_manager.cpp  buffer_manager.h  candidates.cpp  candidates.h  common.h  config.cpp  config.h  cursor.cpp  db.cpp  db.h  engine.cpp  engine.h  errors.h  libtaikey.cpp  libtaikey.h  lomaji.cpp  lomaji.h  splitter.h  sql.h  syl_splitter.cpp  syl_splitter.h  tk_locale.h  tmp.cpp  tmp.h  trie.cpp  trie.h
proto/: command.proto  config.proto  messages.proto
proto/proto/: command.pb.cc  command.pb.h  config.pb.cc  config.pb.h  messages.pb.cc  messages.pb.h  proto.h
resource/: taikey.db  taikey.db.bak
resources/: khiin.db  khiin_config.ini  khiin_test.db  khiin_userdb.txt  license.rtf  taikey.db  taikey.json
taikey/: CMakeLists.txt  buffer.cpp  buffer.h  buffer_manager.cpp  buffer_manager.h  candidates.cpp  candidates.h  common.h  config.cpp  config.h  cursor.cpp  cursor.h  db.cpp  db.h  engine.cpp  engine.h  lomaji.cpp  lomaji.h  splitter.cpp  splitter.h  sql.h  trie.cpp  trie.h  utils.h
tests/: CMakeLists.txt  libtaikey_test.cpp  test_buffer.cpp  test_candidates.cpp  test_db.cpp  test_engine.cpp  test_lomaji.cpp  test_main.cpp  test_splitter.cpp  test_trie.cpp  test_wordlist.cpp
windows/: .clang-format  .clang-tidy  KhiinWindows.sln  README.md  build.ps1  guids.txt  regfix.ps1
windows/KhiinInstaller/: KhiinInstaller.wixproj  Product.wxs
windows/KhiinPJH/: Action.h  BaseWindow.cpp  BaseWindow.h  CandidateListUI.cpp  CandidateListUI.h  CandidatePager.cpp  CandidatePager.h  CandidateWindow.cpp  CandidateWindow.h  Colors.cpp  Colors.h  Compartment.cpp  CompositionMgr.cpp  CompositionMgr.h  CompositionSink.cpp  CompositionSink.h  Config.cpp  DisplayAttributeInfo.cpp  DisplayAttributeInfo.h  DisplayAttributeInfoEnum.cpp  DisplayAttributeInfoEnum.h  DllModule.cpp  DllModule.h  EditSession.cpp  EditSession.h  EngineController.cpp  EngineController.h  Files.cpp  Files.h  Geometry.h  Graphics.cpp  Graphics.h  GridLayout.h  KeyEvent.cpp  KeyEvent.h  KeyEventSink.cpp  KeyEventSink.h  KhiinClassFactory.cpp  KhiinPJH.rc  KhiinPJH.vcxproj  (+22 more)
windows/KhiinSettings/: AppearanceProps.cpp  AppearanceProps.h  InputProps.cpp  InputProps.h  KhiinSettings.cpp  KhiinSettings.h  KhiinSettings.rc  KhiinSettings.vcxproj  KhiinSettings.vcxproj.filters  pch.h  (+4 more)
(+169 files in other folders)
